cd(fix): sync package-lock.json version

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "build": "tsc",
     "format": "prettier --write .",
+    "v": "changeset version && npx -y synclockver",
     "release": "npm install typescript && npm run build && changeset publish"
   },
   "devDependencies": {
